WIP syntax highlight. Code overflow styling fix

--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,9 @@ ul.posts span {
 .post pre.terminal code {
   background-color: #333;
 }
+
+/*Horizontal scroll for overflowing code blocks*/
+.post .highlight { 
+  white-space: pre-wrap;
+  overflow: auto;
+}
